--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@next/env": "^15.4.6",
+    "bcryptjs": "^3.0.2",
+    "jose": "^6.1.0",
+    "mongoose": "^8.18.0",
     "next": "15.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "zod": "^4.0.17"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -21,6 +24,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -31,6 +35,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "jsdom": "^26.1.0",
+    "mongodb-memory-server": "^10.2.0",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
